{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "366c7809-19d0-464b-ab46-5bcdb76b1a05",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b5b7e37e-ed16-419a-b9a4-b4cbdc8df32f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fd00a641-eac4-4d39-8b60-4aa99a7aca7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseGadgets",
                    "type": "Value",
                    "id": "ac0e2447-f238-442f-9da1-b958a6f8f730",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftGadget",
                    "type": "Button",
                    "id": "3bfa7a1e-a617-4656-a9aa-1a0b97e26d0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGadget",
                    "type": "Button",
                    "id": "bba0c653-e410-4107-9f0c-32e701db0df1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "effcea86-fc6b-4511-b5ea-3f5549c4ef65",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fbe3b3b-c60b-48a6-8b64-6d7fc6d00f13",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5fc760c-dc8e-4434-b740-a85814e8adbe",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a4f6dbf-bf66-413b-a771-5b5c77bbd17e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "UseGadgets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ff8f0e6-fb20-484c-b543-910dec5ad7ce",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGadget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69a4f71d-374e-48d2-a67e-210971574ddd",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGadget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}